@@ -672,17 +672,19 @@ class tx_ncstaticfilecache {
 	 *
 	 * @param	array		$dirtyElement: The dirty element record
 	 * @param	t3lib_cli	$parent: (optional) The calling parent object
-	 * @return	boolean		Whether the deletion was successful
+	 * @return	void
 	 */
 	public function processDirtyPagesElement(array $dirtyElement, t3lib_cli $parent = NULL) {
+		$cancelExecution = FALSE;
 		$cacheDirectory = $dirtyElement['host'] . dirname($dirtyElement['file']);
 
-		$deleteStaticCacheDirectoryHooks =& $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['nc_staticfilecache/class.tx_ncstaticfilecache.php']['deleteStaticCacheDirectory'];
-		if (is_array($deleteStaticCacheDirectoryHooks)) {
-			foreach ($deleteStaticCacheDirectoryHooks as $hookFunction) {
+		$processDirtyPagesElementHooks =& $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['nc_staticfilecache/class.tx_ncstaticfilecache.php']['processDirtyPagesElement'];
+		if (is_array($processDirtyPagesElement)) {
+			foreach ($processDirtyPagesElementHooks as $hookFunction) {
 				$hookParameters = array(
 					'dirtyElement' => $dirtyElement,
 					'cacheDirectory' => &$cacheDirectory,
+					'cancelExecution' => &$cancelExecution,
 				);
 				if (isset($parent)) {
 					$hookParameters['cliDispatcher'] = $parent;
@@ -691,37 +693,21 @@ class tx_ncstaticfilecache {
 			}
 		}
 
-		$result = $this->deleteStaticCacheDirectory($cacheDirectory);
-		$GLOBALS['TYPO3_DB']->exec_DELETEquery($this->fileTable, 'uid=' . $dirtyElement['uid']);
+		if (!$cancelExecution) {
+			$result = $this->deleteStaticCacheDirectory($cacheDirectory);
+			$GLOBALS['TYPO3_DB']->exec_DELETEquery($this->fileTable, 'uid=' . $dirtyElement['uid']);
 
-		if (isset($parent)) {
-			if (!isset($result)) {
-				$resultMessage = 'NOT FOUND';
-			} elseif ($result) {
-				$resultMessage = 'OK';
-			} else {
-				$resultMessage = 'FAILED';
-			}
-			$parent->cli_echo('Removing directory ' . $cacheDirectory . '... ' . $resultMessage . PHP_EOL);
-		}
-
-			// Hook: Process dirty pages:
-			// $TYPO3_CONF_VARS['SC_OPTIONS']['nc_staticfilecache/class.tx_ncstaticfilecache.php']['processDirtyPages']
-		$processDirtyPagesHooks =& $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['nc_staticfilecache/class.tx_ncstaticfilecache.php']['processDirtyPages'];
-		if (is_array($processDirtyPagesHooks)) {
-			foreach ($processDirtyPagesHooks as $hookFunction) {
-				$hookParameters = array(
-					'dirtyElement' => $dirtyElement,
-					'deleteResult' => &$result,
-				);
-				if (isset($parent)) {
-					$hookParameters['cliDispatcher'] = $parent;
+			if (isset($parent)) {
+				if (!isset($result)) {
+					$resultMessage = 'NOT FOUND';
+				} elseif ($result) {
+					$resultMessage = 'OK';
+				} else {
+					$resultMessage = 'FAILED';
 				}
-				t3lib_div::callUserFunction($hookFunction, $hookParameters, $this);
+				$parent->cli_echo('Removing directory ' . $cacheDirectory . '... ' . $resultMessage . PHP_EOL);
 			}
 		}
-
-		return $result;
 	}
 
 	/**
